# treasury-mcp-os

./: .gitignore  CLAUDE.md  COMMANDS.md  QUICKSTART-OWNERS.md  QUICKSTART.md  README.md  app.py  how-i-built-treasuryos.md  models.py  pyproject.toml  requirements.txt  rm_dashboard.py  server.py  setup.sh  smb_app.py
.streamlit/: config.toml
portfolio_data/: clients.csv
portfolio_data/apex-manufacturing/: covenants.csv  vendors.csv
portfolio_data/bella-rosa-restaurant/: accounts.csv  business_credit.csv  covenants.csv  personal_credit.csv  transactions.csv  vendors.csv
portfolio_data/coastline-logistics/: accounts.csv  business_credit.csv  covenants.csv  fx_rates.csv  personal_credit.csv  transactions.csv  vendors.csv
sample_data/: accounts.csv  business_credit.csv  fx_rates.csv  personal_credit.csv  transactions.csv
tools/: aggregator.py  covenant_monitor.py  credit_assessor.py  credit_parser.py  forecaster.py  fx_scanner.py  idle_cash.py  payment_optimizer.py  working_capital.py
