[project]
name = "treasury-mcp-os"
version = "0.1.0"
description = "Agentic Treasury Management MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pandas>=2.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
