[project]
name = "treasury-mcp-os"
version = "0.1.0"
description = "Agentic Treasury Management MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.1.0",
    "pdfplumber>=0.11.10",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "streamlit>=1.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
